# adventofcode2023

./: .gitignore  decrypt.sh  encrypt.sh  ideas.md  readme.md  run_all.sh
_inputs/: input.day01.txt.gpg  input.day02.txt.gpg  input.day03.txt.gpg  input.day04.txt.gpg  input.day05.txt.gpg  input.day06.txt.gpg  input.day07.txt.gpg  input.day08.txt.gpg  input.day09.txt.gpg  input.day10.txt.gpg  input.day11.txt.gpg  input.day12.txt.gpg  input.day13.txt.gpg  input.day14.txt.gpg  input.day15.txt.gpg  input.day16.txt.gpg  input.day17.txt.gpg  input.day18.txt.gpg  input.day19.txt.gpg  input.day20.txt.gpg  input.day21.txt.gpg  input.day22.txt.gpg  input.day23.txt.gpg  input.day24.txt.gpg  input.day25.txt.gpg
adventlang/: Cargo.toml  build.sh  day01.k  hello.k  todo.md
adventlang/src/: ast.rs  external.rs  fmt.rs  lib.rs  main.rs  parse.rs  parser_combinators.rs  repl.rs  runtime.rs  runtime_builtins.rs  stdlib.rs  types.rs  value.rs
adventlang/src/gc/: free_list.rs  mod.rs
adventlang/tests/: aoc_examples.rs  test.al
adventlang_vscode_ext/: .gitignore  LICENSE.md  README.md  adventlang-0.0.1.vsix  package.json  tsconfig.json
adventlang_vscode_ext/client/: package-lock.json  package.json
adventlang_vscode_ext/server/: package-lock.json  package.json
adventlang_vscode_ext/src/: extension.ts
adventlang_vscode_ext/syntaxes/: adventlang.tmGrammar.json
adventlang_web/: Cargo.toml  test.al  test.js
bare/: hello.kt  run.sh
day12/: output.txt
gradle/: build.gradle.kts  gradle.properties  run.sh
rust/: day01.k  hello.k  numbers.txt  ui.k
ts/: hello.k  parse.ts
(+57 files in other folders)
