[package]
name = "adventlang"
version = "0.1.0"
edition = "2021"
authors = ["Kelley van Evert <hello@klve.nl>"]

[dependencies]
arcstr = "1.1.5"
atty = "0.2.14"
clap = { version = "4.4.10", features = ["derive"] }
compact_str = "0.7.1"
either = "1.9.0"
fxhash = "0.2.1"
nom = "7.1.3"
nom_locate = "4.2.0"
regex = "1.10.2"
rustyline = { version = "13.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
try_map = "0.3.1"

[profile.release]
debug = 1
